# taxi_fare_prediction

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  logging.yaml  pyproject.toml
.github/workflows/: build.yaml  build_and_deploy.yaml  deploy.yaml
app/: main.py  model.py  router.py  settings.py
app/bot/: __init__.py  bot.py  main_router.py  single_predicion_router.py
app/utils/: aiohttpt_client.py  geocode_client.py  logging_settings.py
notebooks/: FinalProject_task.ipynb
scripts/: restart_container.sh
src/: main.py  model.py  router.py  settings.py
src/bot/: __init__.py  bot.py  main_router.py  menu_buttons.py  router.py  single_predicion_router.py  validators.py
src/utils/: geocode_client.py
