[project]
name = "taxi-fare-prediction"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.15.0",
    "aiohttp<3.11",
    "alembic>=1.14.0",
    "catboost>=1.2.7",
    "category-encoders>=2.6.4",
    "fastapi[all]>=0.115.5",
    "holidays>=0.61",
    "joblib>=1.4.2",
    "numpy<2.0",
    "pandas>=2.2.3",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "pyproj>=3.7.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.5.2",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.1",
]

[dependency-groups]
dev = [
    "catboost>=1.2.7",
    "category-encoders>=2.6.4",
    "holidays>=0.61",
    "jupyter>=1.1.1",
    "lightgbm>=4.5.0",
    "matplotlib>=3.9.2",
    "optuna>=4.1.0",
    "pre-commit>=4.0.1",
    "pyproj>=3.7.0",
    "pytest>=8.3.3",
    "ruff>=0.8.0",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "I",
    "E",
    "W",
    "F"
]
ignore = [
    "E501",
    "W293",
    "W605"
]

# Ruff VsCode Extension by some reason gave me a bug with sorting imports in Notebooks
[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["I001", "F401"]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv.workspace]
members = ["kik", "kek"]
